<resources>
    <string name="app_name">Swoosh App</string>
    <string name="go_all_in_txt">GO ALL IN</string>
    <string name="on_going_all_out_txt">ON GOING ALL OUT</string>
    <string name="find_team_txt"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started_txt">GET STARTED</string>
    <string name="next_button">NEXT</string>
    <string name="cd_ed_item">Cd-Ed</string>
    <string name="mens_item">Mens</string>
    <string name="womens_item">Womens</string>
    <string name="desired_league_txt">Desired League.</string>
    <string name="background_image">background Image</string>
    <string name="app_logo">App Logo</string>
    <string name="i_am_a_txt">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="beginner">BEGINNER</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="baller">BALLER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
</resources>
